# getpixii

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  RELEASELOG.md
.forgejo/workflows/: build.yml
.github/workflows/: build.yml
k8s/: deployment.yaml  namespace.yaml  secret.example.yaml  service.yaml
server/: Cargo.toml
server/migrations/: 0001_init.sql  0002_catalog.sql
server/src/: live.rs  main.rs
web/: index.html  package-lock.json  package.json  vite.config.js
web/public/: robots.txt  sitemap.xml
web/src/: App.jsx  api.js
